@@ -76,7 +76,7 @@ class FatZebraTest < Test::Unit::TestCase
   def test_successful_purchase_with_descriptor
     @gateway.expects(:ssl_request).with { |method, url, body, headers|
       json = JSON.parse(body)
-      json['extra']['descriptor']['name'] == 'Merchant' && json['extra']['descriptor']['location'] == 'Location'
+      json['extra']['name'] == 'Merchant' && json['extra']['location'] == 'Location'
     }.returns(successful_purchase_response)
 
     assert response = @gateway.purchase(@amount, "e1q7dbj2", @options.merge(:merchant => 'Merchant', :merchant_location => 'Location'))
